colcon_ws/log/build_2022-09-10_22-55-04/gatekeeper/stdout_stderr.log
[35m[1mScanning dependencies of target gatekeeper[0m
[ 40%] Built target nominal_controller
[ 60%] [32mBuilding CXX object CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o[0m
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In constructor ‘gatekeeper::Gatekeeper::Gatekeeper()’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:36:3: error: ‘pass_x’ was not declared in this scope
   36 |   pass_x.setFilterFieldName("x");
      |   ^~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:37:3: error: ‘pass_y’ was not declared in this scope
   37 |   pass_y.setFilterFieldName("y");
      |   ^~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:38:3: error: ‘pass_z’ was not declared in this scope
   38 |   pass_z.setFilterFieldName("z");
      |   ^~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In member function ‘void gatekeeper::Gatekeeper::cloud_callback(sensor_msgs::msg::PointCloud2_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:108:3: error: ‘pass_z’ was not declared in this scope
  108 |   pass_z.setInputCloud(pc.makeShared());
      |   ^~~~~~
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
